  - remove warp registration mechanism (was premature optimisation)

    * Framework changes:
        * added MouseX::NativeTraits dependency (fix RT #67196)
        * config-edit: fixed typo (fix RT #66403)
        * Value, Node, AnyId: use dclone to backup constructor parameters
        * Model: Correctly write author and copyright in doc (i.e not as ARRAY0x0...)
    * Application changes:
        * dpkg control dependency: 
            - Dependency filtering mechanism uses source package name to find
              filter value in Meta
              
2011-04-01 Dominique Dumont  <domi.dumont@free.fr> 1.236
    
    * Application changes:
        * dpkg control dependency: 
          - Dependency filtering mechanism now use dpkg meta 
            package_dependency_filter value (i.e. a user parameter).
            Debian_perl package will be filtered on lenny by default
            Filter mechanism can be overriden in a package by package basis
            See Debian::Dpkg::Meta config class for details. 
          - Warn if a package is unknown.
          - Accepts version specified with dpkg variables.
        * dpkg control and copyright: warn if dh-make-perl boilerplate is found
	* dpkg control: added Package-Type parameter (Peter Pentchev)
	* Dpkg meta: new class to enable user to customize dpkg editor. 
          (email-updates and dependency-filter). Content of meta is saved in
          ~/.dpkg-meta.yml
        * Dpkg control: change e-mail address based on content of meta 
          email-updates

    * Framework changes:
	* Value: added replace_follow parameter to specify automatic
	  replacement based on a hash somewhere in the configuration
	  tree (used by dpkg e-mail update)
	* Extracted initialisation of reader and writer from new() and moved in 
	  init() method to avoid deep recursion on startup.
	* Use Any::Moose instead of plain Moose
	* Removed dependency on MooseX::Singleton