@@ -5,6 +5,7 @@ use Test::More ;
 use Config::Model;
 use File::Path;
 use File::Copy ;
+use File::Slurp qw/slurp/;
 use Data::Dumper ;
 
 use warnings;
@@ -26,7 +27,7 @@ Config::Model::Exception::Any->Trace(1) if $arg =~ /e/;
 use Log::Log4perl qw(:easy) ;
 Log::Log4perl->easy_init($arg =~ /l/ ? $TRACE: $ERROR);
 
-plan tests => 6 ;
+plan tests => 7 ;
 
 ok(1,"compiled");
 
@@ -82,3 +83,18 @@ my $i2_root = $i2_hosts->config_root ;
 my $p2_dump = $i2_root->dump_tree ;
 
 is($p2_dump,$load,"compare original data with 2nd instance data") ;
+
+# since full_dump is null, check that dummy param is not written in yaml files
+my $yaml = slurp($yaml_file) || die "can't open $yaml_file:$!";
+my $expect = << 'YAML';
+---
+record:
+- alias: localhost
+  canonical: localhost
+  ipaddr: 127.0.0.1
+- canonical: bilbo
+  ipaddr: 192.168.0.1
+YAML
+
+is($yaml,$expect,"check yaml dump content");
+
